--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,105 @@
 
 .grid3 {
     display: grid;
-    grid-template-columns: repeat(20, 1fr);
+    grid-template-columns: repeat(21, 1fr);
+}
+
+.newcolor {
+    background-color: #7c8569;
+}
+
+.select-parcela {
+    background-color: #a4ab80;
+}
+
+.newcolor2 {
+    background-color: #52493a;
+}
+
+.parcelas {
+    background-color: #e8e0ae;
+}
+
+.select-new-bad-parcela {
+    background-color: #de733e;
+}
+
+.borders {
+    border: 1px solid #52493a;
+}
+
+.text-color {
+    color: #52493a;
+}
+
+#checkbox {
+    display: none;
+}
+
+.toggle {
+    position: relative;
+    width: 40px;
+    cursor: pointer;
+    margin: auto;
+    display: block;
+    height: calc(4px * 3 + 11px * 2);
+}
+
+.bar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 4px;
+    border-radius: calc(4px / 2);
+    background: white;
+    color: inherit;
+    opacity: 1;
+    transition: none 0.35s cubic-bezier(.5, -0.35, .35, 1.5) 0s;
+}
+
+/***** Tornado Animation *****/
+
+.bar--top {
+    bottom: calc(50% + 11px + 4px/ 2);
+    transition-property: bottom, transform;
+    transition-delay: calc(0s + 0.35s) * .6;
+}
+
+.bar--middle {
+    top: calc(50% - 4px/ 2);
+    transition-property: opacity, transform;
+    transition-delay: calc(0s + 0.35s * .3);
+}
+
+.bar--bottom {
+    top: calc(50% + 11px + 4px/ 2);
+    transition-property: top, transform;
+    transition-delay: 0s;
+}
+
+#checkbox:checked+.toggle .bar--top {
+    transform: rotate(-135deg);
+    transition-delay: 0s;
+    bottom: calc(50% - 4px/ 2);
+}
+
+#checkbox:checked+.toggle .bar--middle {
+    opacity: 0;
+    transform: rotate(-135deg);
+    transition-delay: calc(0s + 0.35s * .3);
+}
+
+#checkbox:checked+.toggle .bar--bottom {
+    top: calc(50% - 4px/ 2);
+    transform: rotate(-225deg);
+    transition-delay: calc(0s + 0.35s * .6);
+}
+
+.gridNewClass {
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+}
+
+.newbgcolor {
+    background-color: #97c05c;
 }
